--- a/Dokumentation/content/Content.tex
+++ b/Dokumentation/content/Content.tex
@@ -400,8 +400,8 @@ Using subsystems for the developed components makes it easy to include into and 
 \end{figure}
 
 \section{Signal demonstration}\label{sec:D6_SignalDemonstration}
+Figure \ref{fig:D6_Result} shows a demonstration of the implemented pulse signal. The Simulink car model is initialised with a constant brake pressure of 5 \%. The frequency computation functionality can be seen in subplot 3. The frequency rises from zero, when the car reaches a velocity of 1 m/s (and also the distance is greater than 1m). Then the frequency increases as the car moves closer to 2 m. At 1.9 m traveled distance, the frequency rises to 10, which indicates a continuous pulse. When the car comes to a full stop at approximately 1.4 seconds the frequency goes back to zero, which indicates no pulse. The fourth subplot shows the output pulse signal. It starts when the frequency rises from zero, and the period of the pulses gets shorter with the time increasing. When the frequency starts to indicate a continuous pulse (from approximately 1.25 s) the pulse signal outputs a continuous high signal until the car comes to a stop. When the car stops, the continuous pulse stops and no pulse is output.
 
-todo neu
 \begin{figure}[H]
 \centering
 \includegraphics[width=1\textwidth]{images/D6_result.jpg}
@@ -442,53 +442,36 @@ todo neu
 
 \chapter{D8: Implementation of pulse signal in ASCET}\label{cha:D8}
 
-The pulse signal that has been implemented in Simulink (see chapter \ref{cha:D6}) is now transferred to ASCET. The requirements remain the same.
-The ASCET model consists of three sub-models described in three block diagrams. Two of the sub-models are regular classes that can be instantiated. This makes the whole model modular and the sub-models are able to unit test. One of the two classes calculates a frequency based on a given velocity and position of the car. The second class generates a pulse signal based on the calculated frequency.
-The third class is a static class that passes the calculated frequency to the pulse signal generating class. The static class is also responsible for receiving the velocity and position messages of the car and pass them to the frequency computation class as well as sending the generated pulse signal as a new message. This can be seen in Figure\ref{fig:BlockdiagrammFrequencyComputation} that shows the block diagram of the static class.
+- consists of two classes, one class calculates frequency, second class generates pulse signal \\
+- frequency computation class connects two classes, passes calculated frequency to generate pulse signal \\
+- input: velocity and position, dTs \\
+- output: intern output: frequency, pulse signal \\
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=1\textwidth]{images/Blockdiagramm_FrequencyComputation.png}
-\caption{ASCET block diagram of static class $FrequencyComputation$}
+\caption{ASCET Blockdiagramm of frequency computation}
 \label{fig:BlockdiagrammFrequencyComputation}
 \end{figure}
 
-The frequency is calculated based on the Simulink implementation. However, in ASCET if-clauses with multiple conditions need to be implemented in series. The model can be seen in Figure \ref{fig:BlockdiagrammFrequencyComputationClass} and the sequencing process is described in the following:
-
-\begin{enumerate}
-\item If $x \geq 1.9m$, $v \leq 1.0$ and $v \textgreater 0.0$ return 10 (\textbf{1a} in Figure \ref{fig:BlockdiagrammFrequencyComputationClass})
-\item Otherwise (\textbf{1b} in Figure \ref{fig:BlockdiagrammFrequencyComputationClass}) if $x \geq 1.0$, $v \leq 1.0$ and $v \textgreater 0.0$ find frequency in lookup table (\textbf{2a} in Figure \ref{fig:BlockdiagrammFrequencyComputationClass}). The lookup table is shown in Listing \ref{lst:D8_lookup}. If none of the conditions haven not been meet return 0 (\textbf{2b} in Figure \ref{fig:BlockdiagrammFrequencyComputationClass})
-\end{enumerate}
-
-\begin{lstlisting}[language=Java,basicstyle=\scriptsize, caption= ASCET frequency lookup table,label= lst:D8_lookup]
-characteristic curve_cont frequency_lookup = {{1.0, 1.9}, {1.0, 9.0}};
-\end{lstlisting}
-
+- important: sequenzing \\
+- input: velocity and position, if velocity greater zero and less or equal than 1 and if position greater than 1.9 meters return 10 for continuous pulse, else: check if position greater than 1, then frequency lookup table, else: return zero \\
 \begin{figure}[H]
 \centering
-\includegraphics[width=1\textwidth]{images/Blockdiagramm_FrequencyComputationClassAnno.png}
-\caption{ASCET block diagram of class $FrequencyComputationClass$}
+\includegraphics[width=1\textwidth]{images/Blockdiagramm_FrequencyComputationClass.png}
+\caption{ASCET Blockdiagramm of frequency computation class}
 \label{fig:BlockdiagrammFrequencyComputationClass}
 \end{figure}
 
-After the frequency has been calculated, it is passed to generate the pulse signal. If the frequency equals 10, the desired output is a continuous pulse. This means the pulse is set to 1 (\textbf{1a} in Figure \ref{fig:BlockdiagrammPulseSignal}). If however the frequency equals 0, no pulse is desired resulting in the pulse being set to 0 (\textbf{2a} in Figure \ref{fig:BlockdiagrammPulseSignal}). If $0 \textless frequency \textless 10$, the frequency is integrated to generate the pulse signal. For integration a time component is required. Due to the ability to unit test the component, the time component is passed through a method argument. The frequency is integrated by multiplying frequency and time and adding the result to the previous results (\textbf{2b} in Figure \ref{fig:BlockdiagrammPulseSignal}). In Simulink it is possible to reset the integration block. Due to this not being possible in ASCET, the integrated frequency is reset as soon as the integrated frequency is greater or equal 1 because then one period is over and the new periodic time can be calculated (\textbf{2b} in Figure \ref{fig:BlockdiagrammPulseSignal}).  
-While the integrated frequency is smaller or equal 0.5 the pulse signal is set to 1 (\textbf{3a} in Figure \ref{fig:BlockdiagrammPulseSignal}). Once the frequency is greater than 0.5 the pulse signal is set to 0 (\textbf{3b} in Figure \ref{fig:BlockdiagrammPulseSignal}). This means the signal is high for one half of a period and low for the other half of a period.
+- if frequency zero, return 1, else: if frequency 0 return 0, else: integrate frequency, if integrated frequency greater than 0.5 (pulse width changes by changing this parameter, now half of period) return 1 else 0 so half of period signal high, other half low, reset integration if integrated frequency greater than 1 beziehungsweise if periode is over\\
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=1\textwidth]{images/Blockdiagramm_PulseSignalClassAnno.png}
-\caption{ASCET block diagram of class $PulseSignalClass$}
+\includegraphics[width=1\textwidth]{images/Blockdiagramm_PulseSignalClass.png}
+\caption{ASCET Blockdiagramm of pulse signal class}
 \label{fig:BlockdiagrammPulseSignal}
 \end{figure}
 
-The resulting pulse signal is shown in Figure \ref{fig:BlockdiagrammPulseSignalOutput}. It shows that the period of the pulse signal is getting shorter once the car approaches the target position. The plot also shows that the pulse signal starts once the car is slower than 3.6 km/h (\^= 1m/s) and ends once the car is standing. 
-
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.75\textwidth]{images/ASCET_pulseSignal.png}
-\caption{ASCET output pulse signal}
-\label{fig:BlockdiagrammPulseSignalOutput}
-\end{figure}
 
 
 \chapter{D9: Implementation of unit tests for ASCET model parts}\label{cha:D9}
@@ -599,13 +582,45 @@ irrelevant & V = 0m/s oder V > 1m/s & Zero\\
 
 
 \chapter{D11*: Plausibility check comparing measured velocities and distances}\label{cha:D11}
+The distance signal from the ultrasonic sensor (in case there is a non-moving object in front of it) and the measured car velocity are two measurements that provide independent measurement of travelled distance.\\
+In the given scenario it is known that a non-moving object is 2 m in front of the car. So the ultrasonic sensor can be used to compute travelled distance by comparing distance measurements.\\
+Integrating the velocity also provides a measurement of the travelled distance. These two measurements provide a redundancy in measuring travelled distance. If thes measurements would be significantly different, one of the measurements must be inaccurate. 
+
+The distance signal from the ultrasonic sensor and the measured velocity.
 -statistically independent ultrasonic distance and velocity
 -if distance to next object for ultrasonic sensor is known
 
--al
 \chapter{D13*: Impact of inaccuracies}\label{cha:D13}
+Ultrasonic sensor:
+Using one ultrasonic sensor has limits when measuring distance to objects when parking.
+Several scenarios can be imagined, in which a distance measurement from one ultrasonic sensor does not provide enough information to securely park without causing an accident.
+The scenario in \ref{fig:D13_USLimitAbove} shows the limits of a ultrasound sensor. One ultrasonic sensor in the middle of the front of the car might not be able to detect the two poles. In this case parking based on the information of the ultrasonic sensor might result in an accident.
+Using multiple ultrasonic distributed over the front of the vehicle might be able to resolve such an issue.
+\begin{figure}[H]
+\centering
+\includegraphics[width=.7\textwidth]{images/us_drawing.pdf}
+\caption{Ultrasonic sensor limits}
+\label{fig:D13_USLimitAbove}
+\end{figure}
+With one ultrasonic sensor blind spot over ultrasonic sensor
+-can be seen in figure \ref{fig:D13_USLimitSide}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=.7\textwidth]{images/us_drawing2.pdf}
+\caption{Ultrasonic sensor limits}
+\label{fig:D13_USLimitSide}
+\end{figure}
+pictures poles, round object.
+
+a countermeasure for that could be to use multiple ultrasonic sensors 
 -ultrasonic measurement: what if object is round?
 -
+-also above and below measurement
+
+-velocity measurement
+-different wheel velocities
 \chapter{D14*: Reflection}\label{cha:D14}
 -only 2 meter stop considered
+-no feedback
 -model not realistic
